[package]
name = "pe_resource"
version = "0.2.0"
edition = "2021"
authors = ["Kyle Sabo"]
description = "Find a resource from a PE image without loading it."
# 1.82 adds use<>, which is required to make the code also compile with edition 2024 (1.85+)
rust-version = "1.82"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Note that not enabling this feature does not make the package no_std or not use allocations at all;
# several of the dependencies (i.e. goblin) will always need to allocate memory.
alloc = []

[dependencies]
goblin = {version="0.10", default-features = false, features=["pe32", "pe64"]}
thiserror = { version="2", default-feature = false }
memmap2 = "0.9"
either = { version="1.8", default-features = false }
plain = "0.2"

[profile.release]
opt-level = "s"
debug = false
lto = "fat"
incremental = false
debug-assertions = false
#overflow-checks = false
panic = "abort"
rpath = false
